h1の内容を変更

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>メインブランチ</h1>
+    <h1>サブブランチ</h1>
     <p>stashesは一時保存場所</p>
 </body>
 </html>
